# chain-of-restaurants

01 - Dane/: buildDB.sql  createAndLoad.bat
01 - Dane/csv/: Bistro.csv  Bonus.csv  Chief.csv  Client.csv  Menu.csv  Payment.csv  Product.csv  Worker.csv
01 - Dane/csv/generator/: Bonus.csv  Client.csv  Delivery.csv  Menu.csv  Product.csv  main.py  pyproject.toml
01 - Dane/ctl/: Bistro.ctl  Bonus.ctl  Chief.ctl  Client.ctl  Delivery.ctl  Menu.ctl  Payment.ctl  PlaceOfConsumption.ctl  Product.ctl  Worker.ctl  ww_Invoice.ctl
02 - Zapytania/: Cube.sql  Grouping sets.sql  Partition.sql  Rank.sql  Roullup.sql  Window.sql
03 - Model/: GRUPPING.xml  association.xml  classification.xml  views.sql  views2.sql
