[tool.poetry]
name = "generator"
version = "0.1.0"
description = ""
authors = ["Przemysław Postrch <przemyslaw.postrach@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Faker = "^15.3.4"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

